--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -33,7 +33,13 @@ jobs:
           python-version: '3.9'
           cache: 'pip' # caching pip dependencies
       - run: pip install -r requirements.txt
+
       - run: sudo apt-get install emacs
+
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16
+      - run: npm install
 
       # build
       - run: make
@@ -43,8 +49,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
-          # Upload entire repository
-          path: './out'
+          path: './dist'
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v1
