--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "format": "prettier --write src"
   },
-  "dependencies": {},
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^2.0.0",
     "@tsconfig/svelte": "^3.0.0",
@@ -22,5 +21,8 @@
     "tslib": "^2.4.1",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
+  },
+  "dependencies": {
+    "chart.js": "^4.1.1"
   }
 }
